# styleganr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
.github/workflows/: R-CMD-check.yaml
R/: .testing.R  .testing2.R  RcppExports.R  bias_act.R  conv2d_gradfix.R  custom_ops.R  filtered_lrelu.R  misc.R  networks.R  package.R  stylegan_models.R  styleganr-package.R  upfirdn2d.R
csrc/: CMakeLists.txt
csrc/include/: types.h
csrc/include/styleganr/: styleganr.h
csrc/src/: bias_act.cpp  bias_act_cpu.cpp  filtered_lrelu.cpp  filtered_lrelu_cpu.cpp  lantern_ob.h  styleganr.def  styleganr.h  types.cpp  upfirdn2d.cpp  upfirdn2d_cpu.cpp
inst/def/: styleganr.def
man/: bias_act.Rd  dot-bias_act_cuda.Rd  dot-bias_act_ref.Rd  downsample2d.Rd  filter2d.Rd  filtered_lrelu.Rd  modulated_conv2d.Rd  setup_filter.Rd  sgr_get_model.Rd  styleganr-package.Rd  upfirdn2d.Rd  upsample2d.Rd
src/: Makevars.win  RcppExports.cpp  code.cpp  custom_ops.cpp  styleganr_types.cpp  styleganr_types.h
src/styleganr/: styleganr.h
to_port/: filtered_lrelu.R  upfirdn2d.R
tools/: buildstyleganr.R  save_python_stylegan3_model_for_R.py
